# python-for-water-modellers

./: .gitignore  LICENSE  README.md  myst.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: binder-ci.yml  binder-health.yml  deploy.yml  link-check.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
binder/: jupyter_server_config.py  postBuild  requirements.txt  start
data/: camels_01013500_discharge.csv
planning/: binder_support_plan.md  example_content_first_water_modelling_script.md  implementation_plan.md  llm_coding_guide.md  tutorial_plan.md  vsc_uv_guide.md
scripts/: check_binder.py  check_links.py  execute_notebooks.py
src/python_for_water_modellers/: __init__.py  camels.py  main.py  paths.py
tutorials/: 00_introduction.ipynb  01a_vscode_installation.ipynb  01b_python_extension.ipynb  02a_environment_concepts.ipynb  02b_installing_uv.ipynb  03a_python_basics.ipynb  03b_ai_assisted_coding.ipynb  04a_getting_data.ipynb  04b_discharge_analysis.ipynb  05_resources_next_steps.ipynb
